portfolio-site/styles.css
/* ... */
.skills-section button {
  padding: 10px 0;
  border: none;
  width: 48%;
  font-weight: 700;
  font-size: 1rem;
  border-radius: 5px 5px 0 0;
  cursor: pointer;

  transition: all 300ms;
}

.skill-btn-hidden {
  background: rgba(255, 255, 255, 0.3);
  transition: all 300ms;
}

.skills-section.daymode .skill-btns button {
  color: var(--clr-day-orange)
}

.skills-section.daymode .skill-btns .skill-btn-hidden {
  color: rgb(250, 242, 234);
}



.skills {
  padding: 2em 0;
  min-height: 300px;
  width: 100%;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
  grid-gap: 15px 40px;
  background: var(--clr-dark-base);
  transition: background-color 300ms ease-in;
}

.skill-window {
  padding-bottom: 6em;
  width: 95%;
}

.box-icon {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: var(--clr-off-white);
}


.box-icon i{
  text-shadow: 2px 2px 1px rgba(174, 254, 255, 0.7),
    3px 3px var(--clr-aqua-50op);
    font-size: 50px;
}

section.daymode .box-icon i {
  text-shadow: 2px 2px 1px rgba(250, 208, 94, 0.5),
    3px 3px var(--clr-day-orange);
}

.box-icon p {
  margin-top: 10px;
  font-size: 1rem;
  font-weight: 400;
}

.hidden {
  display: none;
}

/* project section */

.projects-section h2 {
  margin-top: 4em;
}

.projects-section h3 {
  margin: 0;
}

span.construction {
  background: var(--clr-day-orange);
  font-size: .75em;
  border-radius: 10px;
  padding: 2px 7px;
  color: white;
  font-weight: 700;
  margin-left: 10px;

}

.project {
  display: flex;
  justify-content: space-between;
  align-items: center;
  min-height: 50vh;
  margin: 2em 0;
  padding-bottom: 3em;
  border-bottom: 1px solid rgba(128, 128, 128, .25);
}


img.launch-site {
  width: 200px;
  height: 200px;
  object-fit: fill;
  border-radius: 10px;
  box-shadow: var(--bs);
  transition: all 300ms ease;
}

img.launch-site:hover {
  transform: translateY(-10px);
  z-index: 0;
  box-shadow: 0.3em 0.7em 0.8em rgba(0, 0, 0, 0.45),
  0.150em 0.5em 0.3em rgba(0, 0, 0, 0.25);
  transition: all 300ms ease;
}

.project-description {
  padding-right: 4em;
  width: 75%;
}

.project-skills {
  display: flex;
  flex-wrap: wrap;
  padding: 0;
  margin-bottom: 2em;

}

.project-skills li,
.project-buttons button {
  background: var(--clr-teal-accent);
  margin: 5px 6px 0 0;
  color: white;
  font-weight: 700;
  transition: background-color 300ms ease-in;
}

.project-skills li {
  list-style-type: none;
  padding: 3px 8px;
  border-radius: 3px;
}

section.daymode .project-skills li,
section.daymode .project-buttons button {
  background: var(--clr-day-orange);
  transition: background-color 300ms ease-in;
}

.project-buttons {
  margin-bottom: 4em;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.project-buttons a {
  background: var(--clr-teal-accent);
  color: var(--clr-off-white);
  font-size: 1rem;
  cursor: pointer;
  border: none;
  border-radius: 5px;
  padding: 8px 0;
  width: 100%;
  margin-right: 7px;
  text-align: center;
  transition: all 200ms ease-in;
}

section.daymode .project-buttons a {
  background-color: var(--clr-day-orange);
  color: var(--clr-off-white);
  transition: all 200ms ease-in;

}

.project-buttons a:hover {
  background: var(--clr-aqua-accent);
  color: var(--clr-off-white)
}

section.daymode .project-buttons a:hover {
  background: var(--clr-day-gold);
  color: var(--clr-off-white);
  transition: background-color 200ms ease-in;
}

/* project html pages */

section.project-about img {
  border-radius: 10px;
  box-shadow: var(--bs);
}


section.project-about h3 {
  margin-top: 2em;
  text-transform: uppercase;
  font-size: 1.25 rem;
  letter-spacing: 2px;
  color: var(--clr-dark-75op);
  border-bottom: #404040 solid 3px;

}

img.project-cover-img {
  margin: 2em 0;
  align-self: center;
  width: 75%;
  object-fit: cover;
}

.project-img-multiple {
  margin: 2em 0;
  display: grid;
  align-items: start;
  grid-gap: 1em;
  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
}

.project-img-multiple img {
  width: 100%;
}

.project-desc-img {
  width: 45%;
  margin: 1em 2.5em 1em 0;
  float: left;
}

.float-text {
  margin-bottom: 2em;
}

@media (max-width: 550px) {
  .project-desc-img {
    float: none;
    width: 100%;

  }
}

/* footer */

.footer-container {
  max-width: 650px;
  width: 80%;
  margin: 0 auto;
  text-align: left;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

footer .dark-section{
  width: 100%;
  margin: 0;
}

.contact-info {
  color: rgba(255, 255, 255,.7);
  margin-bottom: 4em;
  display:flex;
  width: 100%;
}

.contact-item {
  margin-right: 1em;
  font-weight: 700;
}

.contact-item i {
  margin-right: 5px;
}

@media (max-width: 650px) {
  .project {
    flex-direction: column;
  }

  .project-description {
    width: 90%;
    margin-bottom: 2em;
    order: 2
  }

  .project-description h3 {
    font-size: 1.7rem;
  }
  
  .project-buttons {
    width: 100;
  }

  img.launch-site  {
   width: 90%;
   height: 100%;
   object-fit: cover;
   order: 0;
   margin-bottom: 3em;
   align-self: start;
  }
} 

